--- a/Week-3/index.html
+++ b/Week-3/index.html
@@ -6,7 +6,8 @@
 	<title>Week 3</title>
 </head>
 <body>
-	<h1>Spaghetti Carbonara Recipe</h1>
+	<section>
+		<h1>Spaghetti Carbonara Recipe</h1>
 	<h3>Ingredients</h3>
 	<ul>
 		<li>
@@ -26,42 +27,45 @@
 			</ol>
 		</li>
 	</ul>
-	<h3>Preparation Steps</h3>
-	<table >
-		<tr>
-			<th colspan="2">Step Number </th>
-			<th>Description</th>
-		</tr>
-		<tr>
-			<td>One</td>
-			<td></td>
-			<td>Boil the spaghetti</td>
-		</tr>
-		<tr>
-			<td>Two</td>
-			<td></td>
-			<td>Cook the pancetta</td>
-		</tr>
-		<tr>
-			<td>Three</td>
-			<td></td>
-			<td>Beat the eggs in a bowl</td>
-		</tr>
-		<tr>
-			<td>Four</td>
-			<td></td>
-			<td>Combine the spaghetti and pancetta</td>
-		</tr>
-		<tr>
-			<td>Five</td>
-			<td></td>
-			<td>Add the egg mixture and cheese</td>
-		</tr>
-		<tr>
-			<td>Six</td>
-			<td></td>
-			<td>Mix well and serve hot</td>
-		</tr>
-	</table>
+	</section>
+	<section>
+		<h3>Preparation Steps</h3>
+		<table >
+			<tr>
+				<th colspan="2">Step Number </th>
+				<th>Description</th>
+			</tr>
+			<tr>
+				<td>One</td>
+				<td></td>
+				<td>Boil the spaghetti</td>
+			</tr>
+			<tr>
+				<td>Two</td>
+				<td></td>
+				<td>Cook the pancetta</td>
+			</tr>
+			<tr>
+				<td>Three</td>
+				<td></td>
+				<td>Beat the eggs in a bowl</td>
+			</tr>
+			<tr>
+				<td>Four</td>
+				<td></td>
+				<td>Combine the spaghetti and pancetta</td>
+			</tr>
+			<tr>
+				<td>Five</td>
+				<td></td>
+				<td>Add the egg mixture and cheese</td>
+			</tr>
+			<tr>
+				<td>Six</td>
+				<td></td>
+				<td>Mix well and serve hot</td>
+			</tr>
+		</table>
+	</section>
 </body>
 </html>
