--- a/Week-6/index.html
+++ b/Week-6/index.html
@@ -21,7 +21,7 @@
 		<h5>Wikipedia Iframe</h5>
 		<iframe src="https://www.wikipedia.org/" frameborder="0" width="400" height="250"></iframe>
 		<h5>Youtubev Video - Morning Mood Symphony - https://youtu.be/aMs0rNtBZJk</h5>
-		<iframe src="https://youtu.be/aMs0rNtBZJk" frameborder="0"></iframe>
+		<iframe width="300" height="200" src="https://www.youtube.com/embed/aMs0rNtBZJk?si=1DQ1XEnxeClZIibq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</main>
 </body>
 </html>
