--- a/Week-8/index.html
+++ b/Week-8/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="stylesheet" href="/Week-8/styles.css">
 <head>
     <meta charset="UTF-8">
     <title>Nature Park</title>
